<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/NameStyle"
    android:layout_marginLeft="@dimen/NameStyle"
    android:layout_marginTop="@dimen/NameStyle"
    android:layout_marginRight="@dimen/NameStyle"
    android:layout_marginBottom="@dimen/NameStyle"
    android:background="#CFF6FD"
    android:padding="@dimen/NameStyle"
    android:paddingLeft="@dimen/NameStyle"
    android:paddingTop="@dimen/NameStyle"
    android:paddingRight="@dimen/NameStyle"
    android:paddingBottom="@dimen/NameStyle"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lights_out_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NameStyle"
        android:layout_marginLeft="@dimen/NameStyle"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/NameStyle"
        android:gravity="center"
        android:text="@string/lights_out_text"
        android:textColor="#0E28B9"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/roboto"
        app:layout_constrainedHeight="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/NameStyle"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/play_button"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#1578F1"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tap_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="@dimen/NameStyle"
        android:text="@string/zero"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_twenty_three" />

    <TextView
        android:id="@+id/box_two"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_one"
        app:layout_constraintEnd_toStartOf="@+id/box_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_one" />

    <TextView
        android:id="@+id/box_twenty_five"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_twenty_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_twenty_four" />

    <TextView
        android:id="@+id/box_one"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/box_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lights_out_text" />

    <TextView
        android:id="@+id/box_three"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_four"
        app:layout_constraintEnd_toStartOf="@+id/box_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_two" />

    <TextView
        android:id="@+id/box_four"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_one"
        app:layout_constraintEnd_toStartOf="@+id/box_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_three" />

    <TextView
        android:id="@+id/box_five"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_four" />

    <TextView
        android:id="@+id/box_six"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/box_seven"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_one" />

    <TextView
        android:id="@+id/box_seven"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_six"
        app:layout_constraintEnd_toStartOf="@+id/box_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_six" />

    <TextView
        android:id="@+id/box_eight"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_nine"
        app:layout_constraintEnd_toStartOf="@+id/box_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_seven" />

    <TextView
        android:id="@+id/box_nine"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_six"
        app:layout_constraintEnd_toStartOf="@+id/box_ten"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_eight" />

    <TextView
        android:id="@+id/box_ten"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_nine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_nine" />

    <TextView
        android:id="@+id/box_eleven"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/box_twelve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_six" />

    <TextView
        android:id="@+id/box_twelve"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_thirteen"
        app:layout_constraintEnd_toStartOf="@+id/box_thirteen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_eleven" />

    <TextView
        android:id="@+id/box_thirteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_fourteen"
        app:layout_constraintEnd_toStartOf="@+id/box_fourteen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_twelve" />

    <TextView
        android:id="@+id/box_fourteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_fifteen"
        app:layout_constraintEnd_toStartOf="@+id/box_fifteen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_thirteen" />

    <TextView
        android:id="@+id/box_fifteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_eleven"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_fourteen" />

    <TextView
        android:id="@+id/box_twenty"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_nineteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_nineteen" />

    <TextView
        android:id="@+id/box_nineteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_eighteen"
        app:layout_constraintEnd_toStartOf="@+id/box_twenty"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_eighteen" />

    <TextView
        android:id="@+id/box_eighteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_seventeen"
        app:layout_constraintEnd_toStartOf="@+id/box_nineteen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_seventeen" />

    <TextView
        android:id="@+id/box_seventeen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_sixteen"
        app:layout_constraintEnd_toStartOf="@+id/box_eighteen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_sixteen" />

    <TextView
        android:id="@+id/box_sixteen"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/box_seventeen"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_eleven" />

    <TextView
        android:id="@+id/box_twenty_one"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@+id/box_twenty_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_sixteen" />

    <TextView
        android:id="@+id/box_twenty_two"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_twenty_one"
        app:layout_constraintEnd_toStartOf="@+id/box_twenty_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_twenty_one" />

    <TextView
        android:id="@+id/box_twenty_three"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_twenty_two"
        app:layout_constraintEnd_toStartOf="@+id/box_twenty_four"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_twenty_two" />

    <TextView
        android:id="@+id/box_twenty_four"
        android:layout_width="@dimen/box_width"
        android:layout_height="@dimen/box_height"
        android:layout_margin="5dp"
        android:background="@drawable/tile"
        android:hapticFeedbackEnabled="false"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/box_twenty_three"
        app:layout_constraintEnd_toStartOf="@+id/box_twenty_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/box_twenty_three" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/retry_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/congrats_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/congrats_textview"
        android:textColor="#1962F3"
        android:textSize="26sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tap_count_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/congrats_text" />


</androidx.constraintlayout.widget.ConstraintLayout>